094_binsrch/grade.txt
Grading at 11/05/2018:04:02:09.972559
For commit ID b01ea8e82953c6c20e2838d724bc5e4cf01e6655
Stripping out any main you may have written, and compiling...
newsearch.cpp: In function ‘int binarySearchForZero(Function<int, int>*, int, int)’:
newsearch.cpp:23:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1plus: all warnings being treated as errors
The code did not compile

Overall Grade: F
